--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
 
 // @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 // negative margin up because Bootstrap does not offer this in 5.0
 $enable-negative-margins: true;
+.mt-n70 {margin-top: -7rem !important;}
 .mt-n65 {margin-top: -6.5rem !important;}
 .mt-n60 {margin-top: -6rem !important;}
 .mt-n55 {margin-top: -5.5rem !important;}
@@ -18,6 +20,7 @@ $enable-negative-margins: true;
 .mt-n20 {margin-top: -2rem !important;}
 .mt-n15 {margin-top: -1.5rem !important;}
 .mt-n10 {margin-top: -1rem !important;}
+.mt-n05 {margin-top: -0.5rem !important;}
 
 body {
   font-family: 'Saira', sans-serif;
@@ -30,15 +33,6 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
-
-.grid {
-width: 100%;
-background-image: url('https://i.imgur.com/0bDaIgT.png');
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-opacity: 50%;
 }
 
 .blurry-text {
@@ -54,10 +48,15 @@ opacity: 50%;
 
 // * * * * * * * * * * * * NAV BAR * * * * * * * * * * * * 
 
-.nav
-
-.container-lg {
-  background-color: red;
+#square {
+  width: 110px;
+  height: 68px;
+  border-bottom-right-radius: 50px;
+  outline-color: black;
+  outline-width: 0.5px;
+  outline-style: solid;
+  opacity: 75%;
+  box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
 
 // * * * * * * * * * * * * H O M E * * * * * * * * * * * * 
@@ -85,7 +84,7 @@ opacity: 50%;
 }
 
 .outline {
-  -webkit-text-stroke: 1px;
+  -webkit-text-stroke: 1.5px;
   -webkit-text-stroke-color: black;
   -webkit-text-fill-color: transparent;
 }
@@ -96,6 +95,58 @@ opacity: 50%;
   -webkit-text-fill-color: transparent;
 }
 
+// * * * * * * * * * * * * F O N T  T E X T U R E * * * * * * * * * * * * 
+
+p {font-family: 'Saira', sans-serif; text-transform:uppercase;}
+
+.bgClip {background-image:url("https://i.imgur.com/Qs7tsvS.jpg");
+background-position:0 25%;  
+color:transparent;
+padding:20px 40px;
+-webkit-background-clip:text;
+    -moz-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color:transparent;
+-webkit-animation:BackgroundAnimated 30s linear infinite alternate;
+    -moz-animation:BackgroundAnimated 30s linear infinite alternate;
+    -ms-animation:BackgroundAnimated 30s linear infinite alternate;
+    -o-animation:BackgroundAnimated 30s linear infinite alternate;
+    animation:BackgroundAnimated 30s linear infinite alternate;
+}
+
+@keyframes BackgroundAnimated {
+  from {
+    background-position:0 0
+  }
+  to {
+    background-position:100% 0
+  }
+}
+
+@-webkit-keyframes BackgroundAnimated {
+    from {
+        background-position:0 0
+    }
+    to {
+        background-position:100% 0
+    }
+}
+    @-ms-keyframes BackgroundAnimated {     
+      from {
+        background-position:0 0
+    }
+    to {
+        background-position:100% 0
+    }
+}
+    @-moz-keyframes BackgroundAnimated {
+    from {
+        background-position:0 0
+    }
+    to {
+        background-position:100% 0
+    }
+}
 
 
 // * * * * * * * * * * * * A B O U T * * * * * * * * * * * * 
