--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,47 +47,70 @@ body {
 
 // * * * * * * * * * * * * NAV BAR * * * * * * * * * * * * 
 
-
-#square {
-//   width: 136px;
-//   height: 85px;
-//   border-bottom-right-radius: 50px;
-//   outline-color: black;
-//   outline-width: 0.5px;
-//   outline-style: solid;
+.nb {
   opacity: 80%;
-//   box-shadow: 0 0 8px rgba(0,0,0,0.3);
   letter-spacing: 3px;
 }
 
-.navlist {
+.nav-list {
   letter-spacing: 3px;
   opacity: 80%;
+  text-align: right;
+  width: 300px;
 }
+
+.top-nav {
+  display: none;
+}
+
+  @media only screen and (max-width: 890px) {
+    .Navbar.Toggle {
+      display: none;
+    }
+
+    .mainapp {
+      width: 100vh;
+    }
+ 
+    // .burger-nav {
+    //   position: absolute;
+    //   top: 40px;
+    // } 
+
+    // .navlist {
+    // position: absolute;
+    // bottom: 40px;
+    // }
+  }
+
+  .navbar-toggler {
+    border: none;
+    position: absolute;
+    right: 30px;
+    top: 40px;
+    z-index: 5;
+    position: fixed;
+    padding: 10px;
+  }
+
+  
+  
 
 
 // * * * * * * * * * * * * H O M E * * * * * * * * * * * * 
 
 #home {
-  margin: 300px 0 450px 0;
+  margin-top: 20vh;
+  margin-bottom: 20vh;
   text-align: center;
 }
 
-.titlehome {
-  font-size: 100px;
+.home {
+  opacity: 80%;
 }
 
-.titledev {
-  font-size: 120px;
-  letter-spacing: 10px;
-}
-
-.software {
-  letter-spacing: 10px;
-}
-
-.subtitle {
-  letter-spacing: 10px;
+.apps {
+  letter-spacing: 5px;
 }
 
 .outline {
@@ -180,6 +203,108 @@ animation:BackgroundAnimated 30s linear infinite alternate;
   text-align: justify; 
 }
 
+// * * * Collapsable project text
+/* Style the button that is used to open and close the collapsible content */
+
+.collapsible {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: ease-in-out 1s; 
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: transparent;
+  outline-color: black;
+  text-shadow: 0 0 8px rgba(0,0,0,0.3);
+  text-decoration: underline;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  transition: ease-in-out 1s;
+  background-color: transparent;
+  text-transform: none;
+  font-weight: lighter;
+} 
+
+.project1-image {
+  height: 3em;
+  width: 3.5em;
+}
+
+.readme1-image {
+  height: 3em;
+  width: 4em;
+}
+
+.project2-image {
+  height: 3em;
+  width: 3.5em;
+}
+
+.readme2-image {
+  height: 3em;
+  width: 4em;
+}
+
+.project3-image {
+  height: 3em;
+  width: 3.5em;
+}
+
+.readme3-image {
+  height: 3em;
+  width: 4em;
+}
+.project4-image {
+  height: 3em;
+  width: 3em;
+}
+
+.readme4-image {
+  height: 3em;
+  width: 4em;
+}
+
+.icon {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 0;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  float: left, right, top, bottom;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  z-index: 1;
+}
+
+.icon:hover {
+  z-index: 5;
+  filter: grayscale(0%);
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  transform: rotate(720deg);
+  -webkit-transform: rotate(720deg);
+  -moz-transform: rotate(720deg);
+}
+
+
+
 // * * * * * * * * * * * * E X P E R I E N C E * * * * * * * * * * * * 
 
 #experience {
@@ -220,6 +345,54 @@ animation:BackgroundAnimated 30s linear infinite alternate;
 
 
 
+
+
+
+
+//* hover text to preview image *** (https://support.cargo.site/Show-an-Image-on-Hover)
+
+.hover-title {
+  display: inline;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+.hover-image {
+  visibility: hidden;
+}
+
+body:not(.mobile) .hover-title:hover + .hover-image {
+  visibility: visible;
+  pointer-events: none;
+}
+
+.hover-image {
+  display: flex;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  pointer-events: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+/* Change width and height to scale images */
+  width: 90vw;
+  height: 90vh;
+}
+
+.hover-image img {
+  max-width: 100% !important;
+  max-height: 100% !important;
+  width: auto !important;
+  height: auto !important;
+  margin-bottom: 0;
+}
+
+
+//* * * * * * * * * * * * * * * * * * * * * * * * *
 
 
 
