--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -227,7 +227,7 @@ outline: transparent;
 
 .hidden-text {
   text-transform: none;
-  margin-top: -20px;
+  margin-top: -15px;
 }
 
 
@@ -332,65 +332,32 @@ outline: transparent;
   -moz-transform: scale(1.5);
 }
 
-
-
-
-
-
-
-//* hover text to preview image *** (https://support.cargo.site/Show-an-Image-on-Hover)
-
-// .hover-title {
-//   display: inline;
-//   pointer-events: auto;
-//   cursor: pointer;
-// }
-
-// .hover-image {
-//   visibility: hidden;
-// }
-
-// body:not(.mobile) .hover-title:hover + .hover-image {
-//   visibility: visible;
-//   pointer-events: none;
-// }
-
-// .hover-image {
-//   display: flex;
-//   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   z-index: -1;
-//   pointer-events: none;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-
-// /* Change width and height to scale images */
-//   width: 90vw;
-//   height: 90vh;
-// }
-
-// .hover-image img {
-//   max-width: 100% !important;
-//   max-height: 100% !important;
-//   width: auto !important;
-//   height: auto !important;
-//   margin-bottom: 0;
-// }
-
-
-//* * * * * * * * * * * * * * * * * * * * * * * * *
-
-
-
-
-
 // * * * * * * * * * * * * C O N T A C T * * * * * * * * * * * * 
-
 
 #contact {
   margin: 300px 0 450px 0;
   text-align: center;
+}
+
+.mail-image {
+  height: 6em;
+  width: 6em;
+}
+
+.acgh-image {
+  height: 6em;
+  width: 7em;
+}
+
+.linkedin-image {
+  height: 6em;
+  width: 6em;
+}
+
+// * * * * * * * * * * * * F O O T E R * * * * * * * * * * * * 
+
+.footer-text {
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: smaller;
 }
