--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -134,6 +134,21 @@ body {
 }
 
 
+// .arrow {
+//   margin-bottom: 20px;
+//   height: 35px;
+//   // filter: invert(71%) sepia(11%) saturate(2097%) hue-rotate(119deg) brightness(94%) contrast(83%);
+// }
+// .arrow:hover {
+//   animation: stretch 0.5s ease-out 0s alternate infinite none running;
+// }
+// @keyframes stretch{
+//   100% {
+//     transform: scale(.3);
+//   }
+// }
+
+
 
 // * * * * * * * * * * * * F O N T  T E X T U R E * * * * * * * * * * * * 
 
