--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,6 +50,10 @@ h1 {
   color: #000;
 }
 
+a {
+  color: #000;
+}
+
 p {
   color: #000;
 }
@@ -125,7 +129,7 @@ hr {
  
   .navlist {
     position: absolute;
-    top: 10px;
+    top: 5px;
     width: 50px;
     } 
   }
@@ -134,8 +138,8 @@ hr {
   .navbar-toggler {
     border: none;
     position: absolute;
-    right: 30px;
-    top: 25px;
+    right: 1px;
+    top: 0px;
     z-index: 30;
     position: fixed;
     padding: 10px;
@@ -178,6 +182,9 @@ hr {
 #about {
   margin: 300px 0 450px 0;
   text-align: center;
+  // display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 // * * * * * * * * * * * * S K I L L S * * * * * * * * * * * * 
@@ -185,6 +192,10 @@ hr {
 #skills {
   margin: 300px 0 450px 0;
   text-align: center;
+}
+
+.skills-group {
+  line-height: 5px;
 }
 
 // * * * * * * * * * * * * P R O J E C T S * * * * * * * * * * * * 
@@ -206,6 +217,10 @@ outline: transparent;
 .btn{
   border-color: transparent;
 	box-shadow: transparent;
+}
+
+.project-title {
+  color: #000;
 }
 
 // .project-title:hover {
