--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,32 +3,62 @@
 // @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 // negative margin up because Bootstrap does not offer this in 5.0
 $enable-negative-margins: true;
-.mt-n70 {margin-top: -7rem !important;}
-.mt-n65 {margin-top: -6.5rem !important;}
-.mt-n60 {margin-top: -6rem !important;}
-.mt-n55 {margin-top: -5.5rem !important;}
-.mt-n50 {margin-top: -5rem !important;}
-.mt-n45 {margin-top: -4.5rem !important;}
-.mt-n40 {margin-top: -4rem !important;}
-.mt-n35 {margin-top: -3.5rem !important;}
-.mt-n30 {margin-top: -3.0rem !important;}
-.mt-n25 {margin-top: -2.5rem !important;}
-.mt-n20 {margin-top: -2rem !important;}
-.mt-n15 {margin-top: -1.5rem !important;}
-.mt-n10 {margin-top: -1rem !important;}
-.mt-n05 {margin-top: -0.5rem !important;}
+.mt-n70 {
+  margin-top: -7rem !important;
+}
+.mt-n65 {
+  margin-top: -6.5rem !important;
+}
+.mt-n60 {
+  margin-top: -6rem !important;
+}
+.mt-n55 {
+  margin-top: -5.5rem !important;
+}
+.mt-n50 {
+  margin-top: -5rem !important;
+}
+.mt-n45 {
+  margin-top: -4.5rem !important;
+}
+.mt-n40 {
+  margin-top: -4rem !important;
+}
+.mt-n35 {
+  margin-top: -3.5rem !important;
+}
+.mt-n30 {
+  margin-top: -3rem !important;
+}
+.mt-n25 {
+  margin-top: -2.5rem !important;
+}
+.mt-n20 {
+  margin-top: -2rem !important;
+}
+.mt-n15 {
+  margin-top: -1.5rem !important;
+}
+.mt-n10 {
+  margin-top: -1rem !important;
+}
+.mt-n05 {
+  margin-top: -0.5rem !important;
+}
 
+* {
+  color: rgb(124, 124, 124);
+}
 
 body {
-  font-family: 'Saira', sans-serif;
-  color: #000000;
+  font-family: "Saira", sans-serif;
+  color: rgb(0, 0, 0);
 
-  //* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * 
+  //* * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   //black urban abstract GIF:
   // background-image: url('https://i.imgur.com/OQsplhT.gif');
 
@@ -46,7 +76,8 @@ body {
   background-position: center center;
 }
 
-h1 {
+h1,
+h3 {
   color: #000;
 }
 
@@ -58,12 +89,13 @@ p {
   color: #000;
 }
 
-div {
+div,
+span {
   color: #000;
 }
 
 hr {
-  color:#000;
+  color: #000;
   opacity: 1;
   width: 95%;
   margin-left: auto;
@@ -71,7 +103,7 @@ hr {
 }
 
 .blurry-text {
-    outline-color: none;
+  outline-color: none;
   // outline-color: black;
   // text-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
@@ -80,8 +112,7 @@ hr {
   font-size: 50px;
 }
 
-
-// * * * * * * * * * * * * NAV BAR * * * * * * * * * * * * 
+// * * * * * * * * * * * * NAV BAR * * * * * * * * * * * *
 
 .nb {
   letter-spacing: 3px;
@@ -95,7 +126,7 @@ hr {
 }
 
 .darkmode--activated p {
-  color: #FFF;
+  color: #fff;
 }
 
 .darkmode--activated div {
@@ -126,33 +157,29 @@ hr {
   .mainapp {
     width: 100vh;
   }
- 
+
   .navlist {
     position: absolute;
     top: 5px;
     width: 50px;
-    } 
   }
+}
 
+.navbar-toggler {
+  border: none;
+  position: absolute;
+  right: 1px;
+  top: 0px;
+  z-index: 30;
+  position: fixed;
+  padding: 10px;
+}
 
-  .navbar-toggler {
-    border: none;
-    position: absolute;
-    right: 1px;
-    top: 0px;
-    z-index: 30;
-    position: fixed;
-    padding: 10px;
+.darkmode--activated navbar-toggler {
+  color: #000;
+}
 
-
-  }
-
-  .darkmode--activated navbar-toggler {
-    color: #000;
-  }
- 
-
-// * * * * * * * * * * * * H O M E * * * * * * * * * * * * 
+// * * * * * * * * * * * * H O M E * * * * * * * * * * * *
 
 #home {
   margin-top: 20vh;
@@ -177,7 +204,7 @@ hr {
   -webkit-text-fill-color: transparent;
 }
 
-// * * * * * * * * * * * * A B O U T * * * * * * * * * * * * 
+// * * * * * * * * * * * * A B O U T * * * * * * * * * * * *
 
 #about {
   margin: 300px 0 450px 0;
@@ -187,7 +214,7 @@ hr {
   justify-content: center;
 }
 
-// * * * * * * * * * * * * S K I L L S * * * * * * * * * * * * 
+// * * * * * * * * * * * * S K I L L S * * * * * * * * * * * *
 
 #skills {
   margin: 300px 0 450px 0;
@@ -198,25 +225,26 @@ hr {
   line-height: 5px;
 }
 
-// * * * * * * * * * * * * P R O J E C T S * * * * * * * * * * * * 
+// * * * * * * * * * * * * P R O J E C T S * * * * * * * * * * * *
 
 #projects {
   margin: 300px 0 450px 0;
-  text-align: center;  
+  text-align: center;
 }
 .exp {
-  text-align: justify; 
+  text-align: justify;
 }
 
-.btn-primary.focus, .btn-primary:focus {
-box-shadow: none;
-border-color: transparent;
-outline: transparent;
-}
-
-.btn{
+.btn-primary.focus,
+.btn-primary:focus {
+  box-shadow: none;
   border-color: transparent;
-	box-shadow: transparent;
+  outline: transparent;
+}
+
+.btn {
+  border-color: transparent;
+  box-shadow: transparent;
 }
 
 .project-title {
@@ -295,14 +323,14 @@ outline: transparent;
   -moz-transform: rotate(720deg);
 }
 
-// * * * * * * * * * * * * E X P E R I E N C E * * * * * * * * * * * * 
+// * * * * * * * * * * * * E X P E R I E N C E * * * * * * * * * * * *
 
 #experience {
   margin: 300px 0 450px 0;
   text-align: center;
 }
 
-// * * * * * * * * * * * * I N T E R E S T S * * * * * * * * * * * * 
+// * * * * * * * * * * * * I N T E R E S T S * * * * * * * * * * * *
 
 #interests {
   margin: 300px 0 450px 0;
@@ -331,12 +359,9 @@ outline: transparent;
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
- 
 }
 
-
-
-// * * * * * * * * * * * * C O N T A C T * * * * * * * * * * * * 
+// * * * * * * * * * * * * C O N T A C T * * * * * * * * * * * *
 
 #contact {
   margin: 300px 0 450px 0;
@@ -358,7 +383,7 @@ outline: transparent;
   width: 6em;
 }
 
-// * * * * * * * * * * * * F O O T E R * * * * * * * * * * * * 
+// * * * * * * * * * * * * F O O T E R * * * * * * * * * * * *
 
 .footer-text {
   text-align: center;
