--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -207,7 +207,7 @@ hr {
 // * * * * * * * * * * * * A B O U T * * * * * * * * * * * *
 
 #about {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
   // display: flex;
   align-items: center;
@@ -217,7 +217,7 @@ hr {
 // * * * * * * * * * * * * S K I L L S * * * * * * * * * * * *
 
 #skills {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 
@@ -228,7 +228,7 @@ hr {
 // * * * * * * * * * * * * P R O J E C T S * * * * * * * * * * * *
 
 #projects {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 .exp {
@@ -323,17 +323,24 @@ hr {
   -moz-transform: rotate(720deg);
 }
 
+// * * * * * * * * * * * * S I D E   P R O J E C T S * * * * * * * * * * * *
+
+#sideprojects {
+  margin: 300px 0 600px 0;
+  text-align: center;
+}
+
 // * * * * * * * * * * * * E X P E R I E N C E * * * * * * * * * * * *
 
 #experience {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 
 // * * * * * * * * * * * * I N T E R E S T S * * * * * * * * * * * *
 
 #interests {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 
@@ -364,7 +371,7 @@ hr {
 // * * * * * * * * * * * * C O N T A C T * * * * * * * * * * * *
 
 #contact {
-  margin: 300px 0 450px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 
